src/components/Donate/DonatePage.css
.donateContainer {
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 10px;
  background: url(../../images/donateimage.jpg) center center/ cover no-repeat;
  height: 100%;
  object-fit: contain;
  margin-top: -80px;
  justify-content: center;
}

@media screen and (max-width: 960px) {
  .donateContainer {
    height: 100%;
  }
}

.paypalBtns {
  display: flex;
  flex-direction: column;
  width: 60%;
  justify-content: center;
  align-self: center;
  border: black solid 5px;
  border-radius: 15px;
  padding: 10px;
  background: lightgray;
}

@media screen and (max-width: 960px) {
  .paypalBtns {
    width: 100%;
  }
}

.inputPayment {
  width: 20%;
  align-self: center;
  margin-bottom: 10px;
  text-align: center;
  border-radius: 5px;
}

.flexRow {
  display: flex;
  justify-content: center;
}

.presetAmt {
  height: 70px;
  width: 70px;
  background-color: black;
  border-radius: 10px;
  color: white;
}

@media screen and (max-width: 960px) {
  .presetAmt {
    height: 50px;
    width: 60px;
  }
}

.presetAmounts {
  display: flex;
  justify-content: space-evenly;
  margin-bottom: 10px;
}

.heroTitle {
  margin-top: 80px;
}

.infoBox {
  display: flex;
  flex-direction: column;
  width: 50%;
  border: solid green 10px;
  border-radius: 30px;
  text-align: left;
  padding: 40px;
  gap: 20px;
  /* backdrop-filter: blur(20px); */
  background: white;
}


@media screen and (max-width: 960px) {
  .infoBox {
    width: 90%;
  }
}

.hadith {
  border: solid black 5px;
  border-radius: 10px;
  padding: 15px;
  background-color: #13e816;
}

